# CyGlobsGL

./: README.md  mini_graphics_api.py  pyproject.toml
cyglobsgl/: __init__.py  directives.py
