[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cyglobsgl"
version = "0.1.0"
description = "An open pure-Python software graphics pipeline with packed directives and MVP clip-space rendering."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [{ name = "CyGlobsGL contributors" }]
dependencies = ["Pillow>=10"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
]

[project.urls]
Repository = "https://github.com/somsung46810-collab/CyGlobsGL"

[tool.setuptools.packages.find]
include = ["cyglobsgl*"]
